k3s_server/media/media.lidarr.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: docker.io/linuxserver/lidarr
        imagePullPolicy: IfNotPresent
        name: lidarr
        ports:
        - containerPort: 8686
          protocol: TCP
        volumeMounts:
          - name: media-configurations
            mountPath: "/config"
            subPath: "lidarr"
          - name: media-downloads
            mountPath: "/downloads/transmission"
            subPath: ""
          - name: media-music
            mountPath: "/music"
            subPath: ""
      restartPolicy: Always
      volumes:
      - name: media-music
        persistentVolumeClaim:
          claimName: media-music
      - name: media-downloads
        persistentVolumeClaim:
          claimName: media-downloads
      - name: media-configurations
        persistentVolumeClaim:
          claimName: media-configurations
