k3s_server/media/media.radarr.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: docker.io/linuxserver/radarr
        imagePullPolicy: IfNotPresent
        name: radarr
        ports:
        - containerPort: 7878
          protocol: TCP
        volumeMounts:
          - name: configurations
            mountPath: "/config"
            subPath: "radarr"
          - name: media-nas
            mountPath: "/downloads/transmission"
            subPath: "downloads/transmission"
          - name: media-nas
            mountPath: "/movies"
            subPath: ""
      restartPolicy: Always
      volumes:
      - name: media-nas
        persistentVolumeClaim:
          claimName: media-nas
      - name: configurations
        persistentVolumeClaim:
          claimName: configurations
