k3s_server/media/media.transmission.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: transmission
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
      release: transmission
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: transmission
        release: transmission
    spec:
      volumes:
        - name: media-downloads
          persistentVolumeClaim:
            claimName: media-downloads
        - name: media-configurations
          persistentVolumeClaim:
            claimName: media-configurations
        - name: dev-tun
          hostPath:
            path: /dev/net/tun
            type: ''
      containers:
        - name: transmission
          image: 'haugene/transmission-openvpn:latest-armhf'
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: media-configurations
              mountPath: /data
            - name: media-downloads
              mountPath: /downloads/transmission
              subPath: ""
            - name: dev-tun
              mountPath: /dev/net/tun
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
