k3s_server/media/media.jackett.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett-test
  name: jackett-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9117
  selector:
    app: jackett-test
  type: ClusterIP
