k3s_server/media/media.lidarr.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lidarr
  name: lidarr
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8686
  selector:
    app: lidarr
  type: ClusterIP
