k3s_server/media/media.radarr.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 7878
  selector:
    app: radarr
  type: ClusterIP
