k3s_server/media/media.sonarr.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8989
  selector:
    app: sonarr
  type: ClusterIP
