k3s_server/media/media.transmission.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transmission-test
  name: transmission-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9091
  selector:
    app: transmission-test
  type: ClusterIP
