k3s_server/media/media.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: "media"
  name: "media-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - media.192.168.1.100.nip.io
    secretName: "media.192.168.1.100.nip.io-prod-tls"
  rules:
  - host: "media.192.168.1.100.nip.io"
    http:
      paths:
        - backend:
            serviceName: "transmission-transmission-openvpn"
            servicePort: 80
          path: "/transmission"
        - backend:
            serviceName: "sonarr"
            servicePort: 80
          path: "/sonarr"
        - backend:
            serviceName: "jackett"
            servicePort: 80
          path: "/jackett"
        - backend:
            serviceName: "radarr"
            servicePort: 80
          path: "/radarr"
        - backend:
            serviceName: "jellyfin"
            servicePort: 80
          path: "/jellyfin"
        - backend:
            serviceName: "transmission-test"
            servicePort: 80
          path: "/transmission-test"
